practice 6 in work

--- a/task/17913717ed86d6ce99b8477bf573a6b0.ipynb
+++ b/task/17913717ed86d6ce99b8477bf573a6b0.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -42,28 +42,31 @@
     "class Rectangle:\n",
     "  def __init__(self, width=None, height=None):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    self.width = width\n",
+    "    self.height = height\n",
     "    # Конец вашего кода\n",
     "    \n",
     "  def __str__(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    return 'Rectangle'\n",
     "    # Конец вашего кода\n",
     "\n",
     "  def calc_area(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    area = self.width * self.height\n",
+    "    return area\n",
     "    # Конец вашего кода\n",
     "        \n",
     "  def calc_perimeter(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    perimeter = self.width * 2 + self.height * 2\n",
+    "    return perimeter\n",
     "    # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -74,28 +77,30 @@
     "class Square:\n",
     "  def __init__(self, side=None):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    self.side = side\n",
     "    # Конец вашего кода\n",
     "\n",
     "  def __str__(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    return 'Square'\n",
     "    # Конец вашего кода\n",
     "\n",
     "  def calc_area(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    area = self.side**2\n",
+    "    return area\n",
     "    # Конец вашего кода\n",
     "        \n",
     "  def calc_perimeter(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    perimeter = self.side * 4\n",
+    "    return perimeter\n",
     "    # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -108,28 +113,30 @@
     "class Circle:\n",
     "  def __init__(self, radius=None):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    self.radius = radius\n",
     "    # Конец вашего кода\n",
     "    \n",
     "  def __str__(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    return 'Circle'\n",
     "    # Конец вашего кода\n",
     "\n",
     "  def calc_area(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    s = pi * self.radius**2 \n",
+    "    return s\n",
     "    # Конец вашего кода\n",
     "        \n",
     "  def calc_perimeter(self):\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    l = 2 * pi * self.radius\n",
+    "    return l\n",
     "    # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -154,7 +161,15 @@
     "id": "rzAki95cNyD9",
     "outputId": "30dee728-6182-46c4-f6d9-b5f5958fb064"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Rectangle\nSquare\nCircle\n"
+     ]
+    }
+   ],
    "source": [
     "print(r1)\n",
     "print(s1)\n",
@@ -178,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -188,7 +203,15 @@
     "id": "xpwnc8TMN5FK",
     "outputId": "541199a3-aba9-47dc-bda1-7e1c192c32fe"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "12\n12\n78.53981633974483\n"
+     ]
+    }
+   ],
    "source": [
     "print(r1.calc_area())\n",
     "print(s1.calc_perimeter())\n",
@@ -275,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -289,8 +312,18 @@
     "  list_of_figures = []\n",
     "  with open(filename) as file:\n",
     "    # Начало вашего кода\n",
-    "\n",
-    "    # Конец вашего кода\n",
+    "    content = list(csv.reader(file, delimiter = \",\"))\n",
+    "    for row in content:\n",
+    "        if row[0].title() == 'Rectangle':\n",
+    "            if row[1] == row[2]:\n",
+    "                list_of_figures.append(Square(side=int(row[1])))\n",
+    "            else:\n",
+    "                list_of_figures.append(Rectangle(width=int(row[1]), height=int(row[2])))\n",
+    "        elif row[0].title() == 'Square':\n",
+    "            list_of_figures.append(Square(side=int(row[1])))\n",
+    "        elif row[0].title() == 'Circle':\n",
+    "            list_of_figures.append(Circle(radius=int(row[1])))\n",
+    "    # Конец вашего кода list_of_figures[0] Rectangle, Square и Circle\n",
     "  return list_of_figures"
    ]
   },
@@ -306,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -336,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -346,7 +379,26 @@
     "id": "_nNsu0w_nkZP",
     "outputId": "42be2a1c-bc18-4f39-83a9-3c759c520c56"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<__main__.Circle at 0x7fa27478bcd0>,\n",
+       " <__main__.Square at 0x7fa27478b4f0>,\n",
+       " <__main__.Rectangle at 0x7fa26d3ee880>,\n",
+       " <__main__.Circle at 0x7fa26d3ee3d0>,\n",
+       " <__main__.Rectangle at 0x7fa26d3ee100>,\n",
+       " <__main__.Rectangle at 0x7fa26d3eeac0>,\n",
+       " <__main__.Rectangle at 0x7fa26d3eedf0>,\n",
+       " <__main__.Square at 0x7fa26d3eed60>,\n",
+       " <__main__.Square at 0x7fa26d3eed90>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
    "source": [
     "list_of_figures"
    ]
@@ -374,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -384,7 +436,15 @@
     "id": "KeQQdmPxqD_N",
     "outputId": "2bc5c80a-ec2e-4196-a6ef-a73c531f13ab"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Circle\nSquare\nRectangle\nCircle\nRectangle\nRectangle\nRectangle\nSquare\nSquare\n"
+     ]
+    }
+   ],
    "source": [
     "for fig in list_of_figures:\n",
     "  print(fig)"
@@ -441,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -451,13 +511,15 @@
    "source": [
     "def get_perimeters(list_of_figures):\n",
     "  # Начало вашего кода\n",
-    "\n",
+    "  for object in list_of_figures:\n",
+    "    p = object.calc_perimeter()\n",
+    "    print('{object} has following perimeter: {p:.2f}:'.format(object = object, p = p))\n",
     "  # Качало вашего кода\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -467,7 +529,15 @@
     "id": "8_UIUlYgyP2j",
     "outputId": "398dade4-ee47-4f1d-ec67-10ca8be49694"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Circle has following perimeter: 31.42:\nSquare has following perimeter: 40.00:\nRectangle has following perimeter: 16.00:\nCircle has following perimeter: 81.68:\nRectangle has following perimeter: 8.00:\nRectangle has following perimeter: 34.00:\nRectangle has following perimeter: 24.00:\nSquare has following perimeter: 400.00:\nSquare has following perimeter: 40.00:\n"
+     ]
+    }
+   ],
    "source": [
     "get_perimeters(list_of_figures)"
    ]
@@ -507,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -517,13 +587,15 @@
    "source": [
     "def get_areas(list_of_figures):\n",
     "  # Начало вашего кода\n",
-    "\n",
+    "  for object in list_of_figures:\n",
+    "    area = object.calc_area()\n",
+    "    print('{object} has following area: {area:.2f}'.format(object = object, area = area))\n",
     "  # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -533,7 +605,15 @@
     "id": "N2h0_gKyy1NT",
     "outputId": "f9921541-11fd-4ecc-bb72-841262fbe490"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Circle has following area: 78.54\nSquare has following area: 100.00\nRectangle has following area: 15.00\nCircle has following area: 530.93\nRectangle has following area: 3.00\nRectangle has following area: 60.00\nRectangle has following area: 32.00\nSquare has following area: 10000.00\nSquare has following area: 100.00\n"
+     ]
+    }
+   ],
    "source": [
     "get_areas(list_of_figures)"
    ]
@@ -582,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
