--- a/task/6b6286bff4799e339e1a81098565722f.ipynb
+++ b/task/6b6286bff4799e339e1a81098565722f.ipynb
@@ -340,18 +340,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'wikipediaText' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-9757f0aeb33c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mvector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerateVector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwikipediaText\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'wikipediaText' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def generateVector(inputString):\n",
     "    vocab, parsed = getVocab(inputString)\n",
     "    word2idx = []\n",
     "    for idx, word in enumerate(vocab):\n",
-    "        word2idx[word] = idx\n",
+    "        word2idx[idx] = word\n",
     "        \n",
     "    vector = []\n",
-    "    for word in len(range(parsed)):\n",
+    "    for word in range(len(parsed)):\n",
     "        vector.append(word2idx[word])\n",
     "\n",
     "    return vector\n",
@@ -450,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
