--- a/task_practice6.ipynb
+++ b/task_practice6.ipynb
@@ -18,17 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hello my name is Brad\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "arr1 = [\"Hello\",\"my\",\"name\",\"is\"]\n",
     "name = \"Brad\"\n",
@@ -51,20 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(100, -10)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
+   "outputs": [],
    "source": [
     "def findMaxMin(arr):\n",
     "    return max(arr)min(arr)\n",
@@ -85,17 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Brad Pitt USA \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def concatStrings(**kwargs):\n",
     "    result = \"\"\n",
@@ -118,17 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[2, 3, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "arr3 = list(range(20))\n",
     "\n",
@@ -151,17 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "List is None\n49.49999999999999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def calcMean(arr=None):\n",
     "    if not arr:\n",
@@ -196,7 +153,7 @@
    "source": [
     "def concatNumbers(arr):\n",
     "    ans = \"\"\n",
-    "    for i in range(arr):\n",
+    "    for i in arr:\n",
     "        ans += str(arr[i])\n",
     "        if (i+1) % 4 == 0:\n",
     "            ans += \"\\n\"\n",
@@ -220,17 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['task7.ipynb', '2014.csv', '.git', 'task8.ipynb', 'task_oop4.ipynb', 'annual-enterprise-survey-2019-financial-year-provisional-csv.csv', 'task_re.ipynb', 'task_def3.ipynb', '2015.csv', 'task_for.ipynb', 'test.py', 'task5.ipynb', 'annual-enterprise-survey-2018-financial-year-provisional-csv.csv', 'task_oop3.ipynb', 'task_lists.ipynb', 'task_oop6.ipynb', 'task_tupls.ipynb', 'task_practice3.ipynb', 'task_practice4.ipynb', '2017.csv', '2016.csv', '2013.csv', 'task2.ipynb', 'task1.ipynb', 'task_practice6.ipynb', 'task3.ipynb', 'task_dict.ipynb', 'task_file.ipynb', 'task4.ipynb', 'task6.ipynb', 'task_csv.ipynb', '2018.csv', 'def_in_def.ipynb', 'task', 'task_oop.ipynb', 'task_def.ipynb', 'task_practice5.ipynb', 'task_oop2.ipynb', 'new_file.txt', 'first-trial', 'figures.csv', 'first-trial.ipynb', 'task_practice2.ipynb']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -268,7 +217,7 @@
     "if not directoryExists:\n",
     "    os.mkdir(direc)\n",
     "    \n",
-    "with open(direc + \"file_with_metaphor.txt\") as output:\n",
+    "with open(direc + \"/file_with_metaphor.txt\", 'w') as output:\n",
     "    output.write(text)\n",
     "    \n",
     "with open(direc + \"/file_with_metaphor.txt\", \"r\") as file:\n",
@@ -291,24 +240,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "My name is Laika, I have 4 legs and can say Gaf Gaf. \nI am 3 years old\n"
+     ]
+    }
+   ],
    "source": [
     "class Animal:\n",
-    "    def __init__(kwargs):\n",
-    "        self.__name = kwargs[\"name\"]\n",
-    "        self.__num_legs = kwargs[\"num_legs\"]\n",
-    "        self.__voice = kwargs[\"voice\"]\n",
+    "    def __init__(self, **kwargs):\n",
+    "        self.name = kwargs[\"name\"]\n",
+    "        self.num_legs = kwargs[\"num_legs\"]\n",
+    "        self.voice = kwargs[\"voice\"]\n",
     "    \n",
-    "    def get_voice():\n",
-    "        return voice\n",
+    "    def get_voice(self):\n",
+    "        return self.voice\n",
     "    \n",
-    "    def get_name():\n",
-    "        return name\n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
     "    \n",
-    "    def get_legs():\n",
-    "        return num_legs\n",
+    "    def get_legs(self):\n",
+    "        return self.num_legs\n",
+    "\n",
+    "    def set_voice(self, voice):\n",
+    "        self.voice = voice\n",
+    "    \n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def set_legs(self, num_legs):\n",
+    "        self.num_legs = num_legs\n",
     "    \n",
     "\n",
     "class Dog(Animal):\n",
@@ -317,10 +283,10 @@
     "        self.age = age\n",
     "\n",
     "    def __str__(self):\n",
-    "        return f\"My name is {self.get_name}, I have {self.get_legs} legs and can say {self.get_voice}. \\nI am {self.age} years old\"\n",
+    "        return f\"My name is {self.get_name()}, I have {self.get_legs()} legs and can say {self.get_voice()}. \\nI am {self.age} years old\"\n",
     "\n",
     "\n",
-    "dog1 = Dog(name=\"Laika\",voice=\"Gaf Gaf\", num_legs=4, age=3)\n",
+    "dog1 = Dog(name=\"Laika\", voice=\"Gaf Gaf\", num_legs=4, age=3)\n",
     "print(dog1)"
    ]
   },
@@ -337,13 +303,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "John Wick is adult male\n"
+     ]
+    }
+   ],
    "source": [
     "def generalInfo(gender=None, ageGroup=None):\n",
     "    def personInfo(name=None, familyName=None):\n",
-    "        information = f\"{name} {familyName}\"\n",
+    "        return f\"{name} {familyName} is {ageGroup} {gender}\"\n",
     "\n",
     "    return personInfo\n",
     "\n",
@@ -363,13 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'multiple', 'significant', 'paradigms,', 'standard', 'collection', 'revision', '\"batteries', '1991,', 'garbage', 'included\"', 'and', 'use', 'as', 'does', 'programming', 'conceived', 'a', 'language', '[27]', 'like', 'aim', 'procedural,', 'object-oriented', 'programmers', 'python', 'emphasizes', 'comprehensions', 'large-scale', 'unmodified', 'reference', '2000,', 'high-level,', 'rossum', 'dynamically', 'by', 'approach', 'features', 'it', 'completely', 'on', 'clear,', 'design', 'successor', '2', 'with', 'was', 'garbage-collected', 'described', 'collecting', 'whitespace', 'general-purpose', 'code', 'readability', 'to', 'system', 'much', 'supports', 'notable', 'that', 'small', '[28]', 'released', 'backward-compatible,', 'including', 'its', 'not', 'of', 'comprehensive', 'python`s', 'introduced', 'major', 'often', 'constructs', 'interpreted,', 'an', 'first', 'cycles', '0,', 'capable', 'write', 'run', 'is', 'logical', '1980s', 'the', 'late', 'for', 'in', 'created', 'due', 'list', '2008,', 'object-oriented,', 'library', 'help', '3', 'guido', 'projects', 'functional', 'abc', 'van', 'typed', 'philosophy'}\n"
+     ]
+    }
+   ],
    "source": [
     "def getVocab(inputString):\n",
-    "    inputString = inputString.lower.replace(\".\",\" \")\n",
-    "    parsed = inputString.split\n",
+    "    inputString = inputString.lower().replace(\".\",\" \")\n",
+    "    parsed = inputString.split()\n",
     "    vocab = set(parsed)\n",
     "    return vocab, parsed\n",
     "\n",
@@ -391,18 +373,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['python', 'is', 'an', 'interpreted,', 'high-level,', 'general-purpose', 'programming', 'language', 'created', 'by', 'guido', 'van', 'rossum', 'and', 'first', 'released', 'in', '1991,', 'python`s', 'design', 'philosophy', 'emphasizes', 'code', 'readability', 'with', 'its', 'notable', 'use', 'of', 'significant', 'whitespace', 'its', 'language', 'constructs', 'and', 'object-oriented', 'approach', 'aim', 'to', 'help', 'programmers', 'write', 'clear,', 'logical', 'code', 'for', 'small', 'and', 'large-scale', 'projects', '[27]', 'python', 'is', 'dynamically', 'typed', 'and', 'garbage-collected', 'it', 'supports', 'multiple', 'programming', 'paradigms,', 'including', 'procedural,', 'object-oriented,', 'and', 'functional', 'programming', 'python', 'is', 'often', 'described', 'as', 'a', '\"batteries', 'included\"', 'language', 'due', 'to', 'its', 'comprehensive', 'standard', 'library', '[28]', 'python', 'was', 'conceived', 'in', 'the', 'late', '1980s', 'as', 'a', 'successor', 'to', 'the', 'abc', 'language', 'python', '2', '0,', 'released', 'in', '2000,', 'introduced', 'features', 'like', 'list', 'comprehensions', 'and', 'a', 'garbage', 'collection', 'system', 'capable', 'of', 'collecting', 'reference', 'cycles', 'python', '3', '0,', 'released', 'in', '2008,', 'was', 'a', 'major', 'revision', 'of', 'the', 'language', 'that', 'is', 'not', 'completely', 'backward-compatible,', 'and', 'much', 'python', '2', 'code', 'does', 'not', 'run', 'unmodified', 'on', 'python', '3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab, parsed = getVocab(wikipediaText)\n",
+    "print(parsed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[24, 81, 74, 73, 31, 50, 14, 17, 88, 34, 96, 100, 32, 10, 75, 61, 87, 7, 68, 41, 102, 25, 51, 52, 44, 64, 57, 11, 66, 1, 49, 64, 17, 72, 10, 22, 35, 20, 53, 94, 23, 79, 40, 82, 51, 86, 59, 10, 27, 97, 18, 24, 81, 33, 101, 10, 46, 37, 56, 0, 14, 2, 63, 21, 92, 10, 98, 14, 24, 81, 71, 47, 12, 16, 6, 9, 17, 89, 53, 64, 67, 3, 93, 60, 24, 45, 15, 87, 84, 85, 83, 12, 16, 42, 53, 84, 99, 17, 24, 43, 77, 61, 87, 30, 69, 36, 19, 90, 26, 10, 16, 8, 4, 54, 78, 66, 48, 29, 76, 24, 95, 77, 61, 87, 91, 45, 16, 70, 5, 66, 84, 17, 58, 81, 65, 38, 62, 10, 55, 24, 43, 51, 13, 65, 80, 28, 39, 24, 95]\n"
+     ]
+    }
+   ],
    "source": [
     "def generateVector(inputString):\n",
     "    vocab, parsed = getVocab(inputString)\n",
-    "    word2idx = []\n",
+    "    word2idx = {}\n",
     "    for idx, word in enumerate(vocab):\n",
     "        word2idx[word] = idx\n",
     "        \n",
     "    vector = []\n",
-    "    for word in len(range(parsed)):\n",
+    "    for word in parsed:\n",
     "        vector.append(word2idx[word])\n",
     "\n",
     "    return vector\n",
@@ -422,18 +430,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "My name is Lilly, and I am 4 years old. My gender is female\n"
+     ]
+    }
+   ],
    "source": [
     "class Cat(Animal):\n",
     "    def __init__(self, name, age, gender):\n",
-    "        super().__init__(name=name)\n",
+    "        super().__init__(name=name, voice='Meow-meow', num_legs= 4)\n",
     "        self.age = age\n",
-    "        self.gender=gender\n",
+    "        self.gender = gender\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return \"My name is {self.get_name()}, and I am {self.age} years old. My gender is {self.gender}\"\n",
+    "        return \"My name is {get_name}, and I am {age} years old. My gender is {gender}\".format(get_name=self.get_name(), age=self.age, gender=self.gender)\n",
     "\n",
     "cat1 = Cat(\"Lilly\",4,\"female\")\n",
     "print(cat1)"
@@ -451,16 +467,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "My name is Jackie, I am 1 years old. I have 4 legs\n"
+     ]
+    }
+   ],
    "source": [
     "class Puppy(Dog):\n",
     "    def __init__(self, name=None, age=None, gender=None, num_legs=None):\n",
-    "        super().__init__(name=name, age=age, gender=gender, num_legs)\n",
+    "        super().__init__(name=name, age=age, num_legs=4)\n",
     "        self.age=age\n",
+    "        self.gender = gender\n",
     "    \n",
-    "    def _str__(self):\n",
+    "    def __str__(self):\n",
     "        return f\"My name is {self.get_name()}, I am {self.age} years old. I have {self.get_legs()} legs\"\n",
     "\n",
     "pup1 = Puppy(name=\"Jackie\", age=1, gender=\"male\", num_legs=4)\n",
