--- a/task_modul_introduction.ipynb
+++ b/task_modul_introduction.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,10 @@
     "    # Начало вашего кода\n",
     "    arrt = []\n",
     "    for i in range(len(arr1)):\n",
-    "        arrt.append(arithmetics.rem(arr1[i], arr2[i]))\n",
+    "        a = arr1[i]\n",
+    "        b = arr2[i]\n",
+    "        c = arithmetics.subtract(max(a,b), arithmetics.multiply(arithmetics.divide(max(a, b), min(a, b)), min(a, b)))\n",
+    "        arrt.append(c)\n",
     "    return arrt\n",
     "    # Конец вашего кода\n",
     "    \n",
