--- a/task_practice6.ipynb
+++ b/task_practice6.ipynb
@@ -18,9 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Hello my name is Brad\n"
+     ]
+    }
+   ],
    "source": [
     "arr1 = [\"Hello\",\"my\",\"name\",\"is\"]\n",
     "name = \"Brad\"\n",
@@ -43,12 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(100, -10)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "def findMaxMin(arr):\n",
-    "    return max(arr)min(arr)\n",
+    "    return max(arr), min(arr)\n",
     "\n",
     "arr2 = [100,-10,20,1,0]\n",
     "findMaxMin(arr2)"
@@ -66,9 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Brad Pitt USA \n"
+     ]
+    }
+   ],
    "source": [
     "def concatStrings(**kwargs):\n",
     "    result = \"\"\n",
@@ -91,9 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "arr3 = list(range(20))\n",
     "\n",
@@ -116,9 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "List is None\n49.49999999999999\n"
+     ]
+    }
+   ],
    "source": [
     "def calcMean(arr=None):\n",
     "    if not arr:\n",
@@ -147,9 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0123\n4567\n89\n"
+     ]
+    }
+   ],
    "source": [
     "def concatNumbers(arr):\n",
     "    ans = \"\"\n",
@@ -177,9 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['task7.ipynb', '2014.csv', '.git', 'functions.py', 'task8.ipynb', 'task_oop4.ipynb', 'annual-enterprise-survey-2019-financial-year-provisional-csv.csv', 'task_re.ipynb', 'task_modul_introduction.ipynb', 'task_def3.ipynb', '2015.csv', 'task_for.ipynb', 'test.py', 'task5.ipynb', 'annual-enterprise-survey-2018-financial-year-provisional-csv.csv', 'task_oop3.ipynb', 'task_lists.ipynb', 'task_oop6.ipynb', 'task_tupls.ipynb', 'task_practice3.ipynb', 'task_practice4.ipynb', 'files', '2017.csv', '2016.csv', '2013.csv', 'task2.ipynb', 'task1.ipynb', 'task_practice6.ipynb', 'task3.ipynb', 'task_dict.ipynb', 'task_file.ipynb', 'task4.ipynb', 'arithmetics.py', 'task6.ipynb', 'task_csv.ipynb', '2018.csv', 'def_in_def.ipynb', 'task', 'task_oop.ipynb', '__pycache__', 'task_def.ipynb', 'task_Import_methods.ipynb', 'task_practice5.ipynb', 'task_oop2.ipynb', 'deadline.py', 'new_file.txt', 'first-trial', 'figures.csv', 'first-trial.ipynb', 'task_practice2.ipynb', 'classes.py']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -205,9 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Metaphor: \"Kill two birds in one stone\"\n['file_with_metaphor.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "direc = \"./files\"\n",
     "directoryExists = os.path.exists(direc)\n",
@@ -240,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'multiple', 'significant', 'paradigms,', 'standard', 'collection', 'revision', '\"batteries', '1991,', 'garbage', 'included\"', 'and', 'use', 'as', 'does', 'programming', 'conceived', 'a', 'language', '[27]', 'like', 'aim', 'procedural,', 'object-oriented', 'programmers', 'python', 'emphasizes', 'comprehensions', 'large-scale', 'unmodified', 'reference', '2000,', 'high-level,', 'rossum', 'dynamically', 'by', 'approach', 'features', 'it', 'completely', 'on', 'clear,', 'design', 'successor', '2', 'with', 'was', 'garbage-collected', 'described', 'collecting', 'whitespace', 'general-purpose', 'code', 'readability', 'to', 'system', 'much', 'supports', 'notable', 'that', 'small', '[28]', 'released', 'backward-compatible,', 'including', 'its', 'not', 'of', 'comprehensive', 'python`s', 'introduced', 'major', 'often', 'constructs', 'interpreted,', 'an', 'first', 'cycles', '0,', 'capable', 'write', 'run', 'is', 'logical', '1980s', 'the', 'late', 'for', 'in', 'created', 'due', 'list', '2008,', 'object-oriented,', 'library', 'help', '3', 'guido', 'projects', 'functional', 'abc', 'van', 'typed', 'philosophy'}\n"
+      "{'reference', '0,', 'run', 'small', 'functional', 'language', 'whitespace', 'programming', 'its', '\"batteries', 'comprehensive', 'included\"', 'aim', 'van', 'due', 'readability', 'revision', 'design', 'object-oriented,', 'first', 'constructs', 'much', 'procedural,', 'library', '2008,', 'unmodified', 'collection', 'a', 'created', 'backward-compatible,', 'as', 'guido', '[28]', 'comprehensions', 'capable', 'completely', 'object-oriented', 'emphasizes', 'of', 'help', 'abc', 'often', 'write', 'python`s', 'and', 'not', 'introduced', 'programmers', 'in', '2', 'including', 'philosophy', 'standard', 'clear,', '1991,', 'cycles', 'released', 'significant', 'was', 'logical', 'that', 'an', 'by', 'typed', 'late', 'on', 'with', 'large-scale', 'general-purpose', 'it', 'the', 'is', '[27]', 'supports', 'rossum', 'to', 'interpreted,', 'notable', 'successor', 'list', 'does', 'paradigms,', 'features', '2000,', 'like', 'use', 'code', 'garbage-collected', '1980s', 'python', 'conceived', 'for', '3', 'described', 'projects', 'approach', 'high-level,', 'dynamically', 'garbage', 'system', 'multiple', 'major', 'collecting'}\n"
      ]
     }
    ],
@@ -373,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -391,14 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[24, 81, 74, 73, 31, 50, 14, 17, 88, 34, 96, 100, 32, 10, 75, 61, 87, 7, 68, 41, 102, 25, 51, 52, 44, 64, 57, 11, 66, 1, 49, 64, 17, 72, 10, 22, 35, 20, 53, 94, 23, 79, 40, 82, 51, 86, 59, 10, 27, 97, 18, 24, 81, 33, 101, 10, 46, 37, 56, 0, 14, 2, 63, 21, 92, 10, 98, 14, 24, 81, 71, 47, 12, 16, 6, 9, 17, 89, 53, 64, 67, 3, 93, 60, 24, 45, 15, 87, 84, 85, 83, 12, 16, 42, 53, 84, 99, 17, 24, 43, 77, 61, 87, 30, 69, 36, 19, 90, 26, 10, 16, 8, 4, 54, 78, 66, 48, 29, 76, 24, 95, 77, 61, 87, 91, 45, 16, 70, 5, 66, 84, 17, 58, 81, 65, 38, 62, 10, 55, 24, 43, 51, 13, 65, 80, 28, 39, 24, 95]\n"
+      "[89, 71, 61, 76, 96, 68, 7, 5, 28, 62, 31, 13, 74, 44, 19, 56, 48, 54, 43, 17, 51, 37, 86, 15, 66, 8, 77, 85, 38, 57, 6, 8, 5, 20, 44, 36, 95, 12, 75, 39, 47, 42, 53, 59, 86, 91, 3, 44, 67, 94, 72, 89, 71, 97, 63, 44, 87, 69, 73, 100, 7, 81, 50, 22, 18, 44, 4, 7, 89, 71, 41, 93, 30, 27, 9, 11, 5, 14, 75, 8, 10, 52, 23, 32, 89, 58, 90, 48, 70, 64, 88, 30, 27, 78, 75, 70, 40, 5, 89, 49, 1, 56, 48, 83, 46, 82, 84, 79, 33, 44, 27, 98, 26, 99, 34, 38, 102, 0, 55, 89, 92, 1, 56, 48, 24, 58, 27, 101, 16, 38, 70, 5, 60, 71, 45, 35, 29, 44, 21, 89, 49, 86, 80, 45, 2, 25, 65, 89, 92]\n"
      ]
     }
    ],
@@ -430,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
