--- a/task/16b966a897b9748eb116a6a979bd96fd.ipynb
+++ b/task/16b966a897b9748eb116a6a979bd96fd.ipynb
@@ -426,6 +426,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "type of num1: <class 'int'>\tnum1: 5\ntype of num1: <class 'str'>\tnum1: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 5\n",
+    "print(f'type of num1: {type(num1)}\\tnum1: {num1}')\n",
+    "\n",
+    "num1 = str(num1)\n",
+    "print(f'type of num1: {type(num1)}\\tnum1: {num1}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 114,
    "metadata": {},
    "outputs": [
