--- a/new_ar/task_modules_hw3_prob.ipynb
+++ b/new_ar/task_modules_hw3_prob.ipynb
@@ -35,12 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Class Rectangle is imported successfully!!!!!!!!!!!\nClass Square is imported successfully\nClass Cube is imported successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# Начало вашего кода\n",
-    "\n",
+    "from rectangle import *\n",
+    "from square import *\n",
+    "from cube import *\n",
     "#Конец вашего кода"
    ]
   },
@@ -58,9 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'get_area', 'get_info', 'get_perimeter']\n"
+     ]
+    }
+   ],
    "source": [
     "print(dir(Rectangle))"
    ]
@@ -77,9 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "This class calculates perimeter and area of the rectangles.\n"
+     ]
+    }
+   ],
    "source": [
     "print(Rectangle.get_info())"
    ]
@@ -96,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Rectangle with width 3 cm and height 5 cm\n"
+     ]
+    }
+   ],
    "source": [
     "print(r1)"
    ]
@@ -124,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The perimeter is 16 cm\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The perimeter is {} cm\".format(r1.get_perimeter()))"
    ]
@@ -143,9 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The area is 15 cm2\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The area is {} cm2\".format(r1.get_area()))"
    ]
@@ -162,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'get_area', 'get_info', 'get_perimeter']\n"
+     ]
+    }
+   ],
    "source": [
     "print(dir(Square))"
    ]
@@ -181,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "This class calculates perimeter and area of the square.\n"
+     ]
+    }
+   ],
    "source": [
     "print(Square.get_info())"
    ]
@@ -200,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Square with side 10 cm\n"
+     ]
+    }
+   ],
    "source": [
     "print(s1)"
    ]
@@ -228,9 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The perimeter is 40 cm\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The perimeter is {} cm\".format(s1.get_perimeter()))"
    ]
@@ -247,9 +329,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The area is 100 cm2\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The area is {} cm2\".format(s1.get_area()))"
    ]
@@ -266,9 +356,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'get_info', 'get_surface_area', 'get_volume']\n"
+     ]
+    }
+   ],
    "source": [
     "print(dir(Cube))"
    ]
@@ -285,9 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "This class calculates surface area and volume of the cube.\n"
+     ]
+    }
+   ],
    "source": [
     "print(Cube.get_info())"
    ]
@@ -304,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,9 +419,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Cube with side 10 cm\n"
+     ]
+    }
+   ],
    "source": [
     "print(c1)"
    ]
@@ -332,9 +446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The surface area is 600 cm2\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The surface area is {} cm2\".format(c1.get_surface_area()))"
    ]
@@ -351,9 +473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The volume is 1000 cm2\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The volume is {} cm2\".format(c1.get_volume()))"
    ]
@@ -385,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
