--- a/final_project/test.ipynb
+++ b/final_project/test.ipynb
@@ -28,32 +28,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import packages"
+    "import packages.hello as hi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "module 'packages' has no attribute 'hi'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-e135225b007d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpackages\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Nataly'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'packages' has no attribute 'hi'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Hello! Nataly!'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
     }
    ],
    "source": [
-    "packages.hi('Nataly')"
+    "hi.hi('Nataly')"
    ]
   },
   {
